# LRW

./: CMakeLists.txt  License.txt  README.md
data/: tg_2modular.gdf  tg_2modulars_3star.gdf  tg_2modulars_unbalanced.gdf  tg_3modulars.gdf  tg_bowtie.gdf  tg_modular.gdf
lrw/: CMakeLists.txt  lrw.hpp  main.cpp
mcl/: CMakeLists.txt  main.cpp  mcl.hpp
test/: test_basic.sh  test_mpi.sh
utils/: CMakeLists.txt  el.hpp  gdf.hpp  global.hpp  hcluster.hpp  tools.hpp
utils/csparse/: License.txt  csparse.c  csparse.h
